上传Speical Challenge 配置工具

--- a/Tournament/TournamentConfig.json
+++ b/Tournament/TournamentConfig.json
@@ -113,8 +113,8 @@
                     200609,
                     200709,
                     201109,
-                    200109,
-                    200309,
+                    201309,
+                    200509,
                     201609,
                     201009,
                     200909
@@ -132,6 +132,14 @@
                     {
                         "money": 4,
                         "offer_id": 110213
+                    },
+                    {
+                        "money": 6,
+                        "offer_id": 110214
+                    },
+                    {
+                        "money": 10,
+                        "offer_id": 110215
                     }
                 ],
                 "stage": 38004,
@@ -241,8 +249,8 @@
                     200611,
                     200711,
                     201111,
-                    200111,
-                    200311,
+                    201311,
+                    200511,
                     201611,
                     201011,
                     200911
@@ -260,6 +268,14 @@
                     {
                         "money": 6,
                         "offer_id": 110223
+                    },
+                    {
+                        "money": 10,
+                        "offer_id": 110224
+                    },
+                    {
+                        "money": 15,
+                        "offer_id": 110225
                     }
                 ],
                 "stage": 38005,
@@ -369,8 +385,8 @@
                     200613,
                     200713,
                     201113,
-                    200113,
-                    200313,
+                    201313,
+                    200513,
                     201613,
                     201013,
                     200913
@@ -388,6 +404,14 @@
                     {
                         "money": 10,
                         "offer_id": 110233
+                    },
+                    {
+                        "money": 15,
+                        "offer_id": 110234
+                    },
+                    {
+                        "money": 30,
+                        "offer_id": 110235
                     }
                 ],
                 "stage": 38006,
