Update tools  Download from GoogleSheet

--- a/CourseCardSystem/CourseCardGroupConfig.json
+++ b/CourseCardSystem/CourseCardGroupConfig.json
@@ -2,7 +2,7 @@
     "1": {
         "id": 1,
         "name": "stage1",
-        "is_active": "true",
+        "is_active": true,
         "course_card": [
             {
                 "id": 1
@@ -12,27 +12,6 @@
             },
             {
                 "id": 3
-            },
-            {
-                "id": 4
-            },
-            {
-                "id": 5
-            },
-            {
-                "id": 6
-            },
-            {
-                "id": 7
-            },
-            {
-                "id": 8
-            },
-            {
-                "id": 9
-            },
-            {
-                "id": 10
             }
         ]
     }
