--- a/CourseCardSystem/skillConfig.json
+++ b/CourseCardSystem/skillConfig.json
@@ -4,7 +4,7 @@
         "skill_desc": "skill_power",
         "skill_type": 1,
         "skill_value": 3,
-        "skill_value_type": 3,
+        "skill_value_type": 0,
         "club_ids": [],
         "ball_types": [
             2
@@ -16,7 +16,7 @@
         "skill_desc": "skill_power",
         "skill_type": 1,
         "skill_value": 6,
-        "skill_value_type": 6,
+        "skill_value_type": 0,
         "club_ids": [],
         "ball_types": [
             2
@@ -28,7 +28,7 @@
         "skill_desc": "skill_power",
         "skill_type": 1,
         "skill_value": 9,
-        "skill_value_type": 9,
+        "skill_value_type": 0,
         "club_ids": [],
         "ball_types": [
             2
@@ -40,7 +40,7 @@
         "skill_desc": "skill_power",
         "skill_type": 1,
         "skill_value": 12,
-        "skill_value_type": 12,
+        "skill_value_type": 0,
         "club_ids": [],
         "ball_types": [
             2
@@ -52,7 +52,7 @@
         "skill_desc": "skill_power",
         "skill_type": 1,
         "skill_value": 15,
-        "skill_value_type": 15,
+        "skill_value_type": 0,
         "club_ids": [],
         "ball_types": [
             2
@@ -64,7 +64,7 @@
         "skill_desc": "skill_power",
         "skill_type": 1,
         "skill_value": 18,
-        "skill_value_type": 18,
+        "skill_value_type": 0,
         "club_ids": [],
         "ball_types": [
             2
@@ -76,7 +76,7 @@
         "skill_desc": "skill_power",
         "skill_type": 1,
         "skill_value": 21,
-        "skill_value_type": 21,
+        "skill_value_type": 0,
         "club_ids": [],
         "ball_types": [
             2
@@ -88,7 +88,7 @@
         "skill_desc": "skill_power",
         "skill_type": 1,
         "skill_value": 24,
-        "skill_value_type": 24,
+        "skill_value_type": 0,
         "club_ids": [],
         "ball_types": [
             2
@@ -100,7 +100,7 @@
         "skill_desc": "skill_power",
         "skill_type": 1,
         "skill_value": 27,
-        "skill_value_type": 27,
+        "skill_value_type": 0,
         "club_ids": [],
         "ball_types": [
             2
@@ -112,7 +112,7 @@
         "skill_desc": "skill_power",
         "skill_type": 1,
         "skill_value": 30,
-        "skill_value_type": 30,
+        "skill_value_type": 0,
         "club_ids": [],
         "ball_types": [
             2
@@ -124,7 +124,7 @@
         "skill_desc": "skill_power",
         "skill_type": 2,
         "skill_value": -10,
-        "skill_value_type": -10,
+        "skill_value_type": 0,
         "club_ids": [
             0
         ],
@@ -136,7 +136,7 @@
         "skill_desc": "reduce_needle_speed",
         "skill_type": 2,
         "skill_value": -20,
-        "skill_value_type": -20,
+        "skill_value_type": 0,
         "club_ids": [
             0
         ],
@@ -148,7 +148,7 @@
         "skill_desc": "reduce_needle_speed",
         "skill_type": 2,
         "skill_value": -30,
-        "skill_value_type": -30,
+        "skill_value_type": 0,
         "club_ids": [
             0
         ],
@@ -160,7 +160,7 @@
         "skill_desc": "skill_ball_power",
         "skill_type": 3,
         "skill_value": 8,
-        "skill_value_type": 8,
+        "skill_value_type": 0,
         "club_ids": [
             0
         ],
@@ -174,7 +174,7 @@
         "skill_desc": "skill_ball_power",
         "skill_type": 3,
         "skill_value": 16,
-        "skill_value_type": 16,
+        "skill_value_type": 0,
         "club_ids": [
             0
         ],
@@ -188,7 +188,7 @@
         "skill_desc": "skill_ball_power",
         "skill_type": 3,
         "skill_value": 24,
-        "skill_value_type": 24,
+        "skill_value_type": 0,
         "club_ids": [
             0
         ],
@@ -202,7 +202,7 @@
         "skill_desc": "skill_ball_power",
         "skill_type": 3,
         "skill_value": 32,
-        "skill_value_type": 32,
+        "skill_value_type": 0,
         "club_ids": [
             0
         ],
@@ -216,7 +216,7 @@
         "skill_desc": "skill_ball_power",
         "skill_type": 3,
         "skill_value": 40,
-        "skill_value_type": 40,
+        "skill_value_type": 0,
         "club_ids": [
             0
         ],
@@ -230,7 +230,7 @@
         "skill_desc": "skill_ball_power",
         "skill_type": 3,
         "skill_value": 48,
-        "skill_value_type": 48,
+        "skill_value_type": 0,
         "club_ids": [
             0
         ],
@@ -244,7 +244,7 @@
         "skill_desc": "skill_ball_power",
         "skill_type": 3,
         "skill_value": 56,
-        "skill_value_type": 56,
+        "skill_value_type": 0,
         "club_ids": [
             0
         ],
@@ -258,7 +258,7 @@
         "skill_desc": "skill_side_spin_up",
         "skill_type": 6,
         "skill_value": 20,
-        "skill_value_type": 20,
+        "skill_value_type": 1,
         "club_ids": [
             19
         ],
@@ -270,7 +270,7 @@
         "skill_desc": "skill_side_spin_up",
         "skill_type": 6,
         "skill_value": 40,
-        "skill_value_type": 40,
+        "skill_value_type": 1,
         "club_ids": [
             19
         ],
@@ -282,7 +282,7 @@
         "skill_desc": "skill_side_spin_up",
         "skill_type": 6,
         "skill_value": 50,
-        "skill_value_type": 50,
+        "skill_value_type": 1,
         "club_ids": [
             19
         ],
@@ -294,7 +294,7 @@
         "skill_desc": "skill_side_spin_up",
         "skill_type": 6,
         "skill_value": 65,
-        "skill_value_type": 65,
+        "skill_value_type": 1,
         "club_ids": [
             19
         ],
@@ -306,7 +306,7 @@
         "skill_desc": "skill_reduce_wind",
         "skill_type": 5,
         "skill_value": -10,
-        "skill_value_type": -10,
+        "skill_value_type": 0,
         "club_ids": [],
         "ball_types": [],
         "Note": "wind -10%"
@@ -316,7 +316,7 @@
         "skill_desc": "skill_reduce_wind",
         "skill_type": 5,
         "skill_value": -20,
-        "skill_value_type": -20,
+        "skill_value_type": 0,
         "club_ids": [],
         "ball_types": [],
         "Note": "wind -10%"
@@ -326,7 +326,7 @@
         "skill_desc": "skill_bounce",
         "skill_type": 4,
         "skill_value": 30,
-        "skill_value_type": 30,
+        "skill_value_type": 0,
         "club_ids": [
             0
         ],
@@ -340,7 +340,7 @@
         "skill_desc": "skill_side_spin_up",
         "skill_type": 7,
         "skill_value": 20,
-        "skill_value_type": 20,
+        "skill_value_type": 1,
         "club_ids": [
             20
         ],
@@ -352,7 +352,7 @@
         "skill_desc": "skill_side_spin_up",
         "skill_type": 7,
         "skill_value": 40,
-        "skill_value_type": 40,
+        "skill_value_type": 1,
         "club_ids": [
             20
         ],
@@ -364,7 +364,7 @@
         "skill_desc": "skill_side_spin_up",
         "skill_type": 7,
         "skill_value": 50,
-        "skill_value_type": 50,
+        "skill_value_type": 1,
         "club_ids": [
             20
         ],
@@ -376,7 +376,7 @@
         "skill_desc": "skill_side_spin_up",
         "skill_type": 7,
         "skill_value": 65,
-        "skill_value_type": 65,
+        "skill_value_type": 1,
         "club_ids": [
             20
         ],
@@ -388,7 +388,7 @@
         "skill_desc": "skill_power",
         "skill_type": 1,
         "skill_value": 4,
-        "skill_value_type": 4,
+        "skill_value_type": 0,
         "club_ids": [],
         "ball_types": [
             2
@@ -400,7 +400,7 @@
         "skill_desc": "skill_power",
         "skill_type": 1,
         "skill_value": 13,
-        "skill_value_type": 13,
+        "skill_value_type": 0,
         "club_ids": [],
         "ball_types": [
             2
@@ -412,7 +412,7 @@
         "skill_desc": "skill_power",
         "skill_type": 1,
         "skill_value": 22,
-        "skill_value_type": 22,
+        "skill_value_type": 0,
         "club_ids": [],
         "ball_types": [
             2
@@ -424,7 +424,7 @@
         "skill_desc": "skill_bounce",
         "skill_type": 3,
         "skill_value": 10,
-        "skill_value_type": 10,
+        "skill_value_type": 0,
         "club_ids": [],
         "ball_types": [
             2
@@ -436,7 +436,7 @@
         "skill_desc": "skill_power",
         "skill_type": 1,
         "skill_value": 31,
-        "skill_value_type": 31,
+        "skill_value_type": 0,
         "club_ids": [],
         "ball_types": [
             2
@@ -448,7 +448,7 @@
         "skill_desc": "skill_bounce",
         "skill_type": 3,
         "skill_value": 20,
-        "skill_value_type": 20,
+        "skill_value_type": 0,
         "club_ids": [],
         "ball_types": [
             2
@@ -460,7 +460,7 @@
         "skill_desc": "skill_earth_power_up",
         "skill_type": 1,
         "skill_value": 11,
-        "skill_value_type": 11,
+        "skill_value_type": 0,
         "club_ids": [
             31
         ],
@@ -472,7 +472,7 @@
         "skill_desc": "skill_top_spin_up",
         "skill_type": 5,
         "skill_value": 5,
-        "skill_value_type": 5,
+        "skill_value_type": 1,
         "club_ids": [
             31
         ],
@@ -484,7 +484,7 @@
         "skill_desc": "skill_earth_power_up",
         "skill_type": 1,
         "skill_value": 14,
-        "skill_value_type": 14,
+        "skill_value_type": 0,
         "club_ids": [
             31
         ],
@@ -496,7 +496,7 @@
         "skill_desc": "skill_top_spin_up",
         "skill_type": 5,
         "skill_value": 20,
-        "skill_value_type": 20,
+        "skill_value_type": 1,
         "club_ids": [
             31
         ],
@@ -508,7 +508,7 @@
         "skill_desc": "skill_top_spin_up",
         "skill_type": 5,
         "skill_value": 40,
-        "skill_value_type": 40,
+        "skill_value_type": 1,
         "club_ids": [
             31
         ],
@@ -520,7 +520,7 @@
         "skill_desc": "skill_earth_reduce_wind",
         "skill_type": 4,
         "skill_value": -30,
-        "skill_value_type": -30,
+        "skill_value_type": 0,
         "club_ids": [
             31
         ],
@@ -532,7 +532,7 @@
         "skill_desc": "skill_earth_power_up",
         "skill_type": 1,
         "skill_value": 9,
-        "skill_value_type": 9,
+        "skill_value_type": 0,
         "club_ids": [
             31
         ],
@@ -544,7 +544,7 @@
         "skill_desc": "reduce_needle_speed",
         "skill_type": 2,
         "skill_value": -10,
-        "skill_value_type": -10,
+        "skill_value_type": 0,
         "club_ids": [],
         "ball_types": [],
         "Note": "need_speed -10%"
@@ -554,7 +554,7 @@
         "skill_desc": "skill_earth_reduce_wind",
         "skill_type": 4,
         "skill_value": -10,
-        "skill_value_type": -10,
+        "skill_value_type": 0,
         "club_ids": [
             31
         ],
@@ -566,7 +566,7 @@
         "skill_desc": "reduce_needle_speed",
         "skill_type": 2,
         "skill_value": -20,
-        "skill_value_type": -20,
+        "skill_value_type": 0,
         "club_ids": [],
         "ball_types": [],
         "Note": "need_speed -20%"
@@ -576,7 +576,7 @@
         "skill_desc": "skill_top_spin_up",
         "skill_type": 5,
         "skill_value": 55,
-        "skill_value_type": 55,
+        "skill_value_type": 0,
         "club_ids": [
             31
         ],
@@ -588,7 +588,7 @@
         "skill_desc": "reduce_needle_speed",
         "skill_type": 2,
         "skill_value": -30,
-        "skill_value_type": -30,
+        "skill_value_type": 0,
         "club_ids": [],
         "ball_types": [],
         "Note": "need_speed -30%"
@@ -598,7 +598,7 @@
         "skill_desc": "skill_power",
         "skill_type": 1,
         "skill_value": 5,
-        "skill_value_type": 5,
+        "skill_value_type": 0,
         "club_ids": [],
         "ball_types": [
             2
@@ -610,7 +610,7 @@
         "skill_desc": "skill_power",
         "skill_type": 1,
         "skill_value": 13,
-        "skill_value_type": 13,
+        "skill_value_type": 0,
         "club_ids": [],
         "ball_types": [
             2
@@ -622,7 +622,7 @@
         "skill_desc": "skill_power",
         "skill_type": 1,
         "skill_value": 21,
-        "skill_value_type": 21,
+        "skill_value_type": 0,
         "club_ids": [],
         "ball_types": [
             2
@@ -634,7 +634,7 @@
         "skill_desc": "skill_spinner_power_up",
         "skill_type": 11,
         "skill_value": 8,
-        "skill_value_type": 8,
+        "skill_value_type": 0,
         "club_ids": [
             50
         ],
@@ -646,7 +646,7 @@
         "skill_desc": "skill_power",
         "skill_type": 1,
         "skill_value": 29,
-        "skill_value_type": 29,
+        "skill_value_type": 0,
         "club_ids": [],
         "ball_types": [
             2
@@ -658,7 +658,7 @@
         "skill_desc": "skill_power",
         "skill_type": 1,
         "skill_value": 37,
-        "skill_value_type": 37,
+        "skill_value_type": 0,
         "club_ids": [],
         "ball_types": [
             2
@@ -670,7 +670,7 @@
         "skill_desc": "skill_power",
         "skill_type": 1,
         "skill_value": 45,
-        "skill_value_type": 45,
+        "skill_value_type": 0,
         "club_ids": [],
         "ball_types": [
             2
@@ -682,7 +682,7 @@
         "skill_desc": "skill_bounce",
         "skill_type": 4,
         "skill_value": 15,
-        "skill_value_type": 15,
+        "skill_value_type": 0,
         "club_ids": [],
         "ball_types": [
             2
@@ -694,7 +694,7 @@
         "skill_desc": "skill_power",
         "skill_type": 1,
         "skill_value": 53,
-        "skill_value_type": 53,
+        "skill_value_type": 0,
         "club_ids": [],
         "ball_types": [
             2
@@ -706,7 +706,7 @@
         "skill_desc": "wind resistance",
         "skill_type": 5,
         "skill_value": 50,
-        "skill_value_type": 50,
+        "skill_value_type": 0,
         "club_ids": [
             50
         ],
@@ -718,7 +718,7 @@
         "skill_desc": "skill_bounce",
         "skill_type": 4,
         "skill_value": 20,
-        "skill_value_type": 20,
+        "skill_value_type": 0,
         "club_ids": [],
         "ball_types": [
             2
@@ -730,7 +730,7 @@
         "skill_desc": "skill_power",
         "skill_type": 1,
         "skill_value": 61,
-        "skill_value_type": 61,
+        "skill_value_type": 0,
         "club_ids": [],
         "ball_types": [
             2
@@ -742,7 +742,7 @@
         "skill_desc": "skill_side_spin_up",
         "skill_type": 1,
         "skill_value": 20,
-        "skill_value_type": 20,
+        "skill_value_type": 1,
         "club_ids": [
             19
         ],
@@ -754,11 +754,197 @@
         "skill_desc": "skill_top_spin_up",
         "skill_type": 1,
         "skill_value": -20,
-        "skill_value_type": -20,
+        "skill_value_type": 1,
         "club_ids": [
             50
         ],
         "ball_types": [],
         "Note": "Spinner_side_spin +20"
+    },
+    "1063": {
+        "skill_id": 1063,
+        "skill_desc": "skill_power",
+        "skill_type": 1,
+        "skill_value": 5,
+        "skill_value_type": 0,
+        "club_ids": [],
+        "ball_types": [],
+        "Note": "jump ball power +5%"
+    },
+    "1064": {
+        "skill_id": 1064,
+        "skill_desc": "skill_bounce",
+        "skill_type": 3,
+        "skill_value": 5,
+        "skill_value_type": 0,
+        "club_ids": [],
+        "ball_types": [],
+        "Note": "jump ball bounce +5%"
+    },
+    "1065": {
+        "skill_id": 1065,
+        "skill_desc": "skill_power",
+        "skill_type": 1,
+        "skill_value": 8,
+        "skill_value_type": 0,
+        "club_ids": [],
+        "ball_types": [],
+        "Note": "jump ball power +8%"
+    },
+    "1066": {
+        "skill_id": 1066,
+        "skill_desc": "skill_top_spin_up",
+        "skill_type": 5,
+        "skill_value": 10,
+        "skill_value_type": 1,
+        "club_ids": [
+            31
+        ],
+        "ball_types": [],
+        "Note": "earth_top_spin +10"
+    },
+    "1067": {
+        "skill_id": 1067,
+        "skill_desc": "skill_top_spin_up",
+        "skill_type": 5,
+        "skill_value": 10,
+        "skill_value_type": 1,
+        "club_ids": [
+            32
+        ],
+        "ball_types": [],
+        "Note": "moon_top_spin +10"
+    },
+    "1068": {
+        "skill_id": 1068,
+        "skill_desc": "skill_bounce",
+        "skill_type": 3,
+        "skill_value": 5,
+        "skill_value_type": 0,
+        "club_ids": [],
+        "ball_types": [],
+        "Note": "jump ball bounce +5%"
+    },
+    "1069": {
+        "skill_id": 1069,
+        "skill_desc": "skill_power",
+        "skill_type": 1,
+        "skill_value": 5,
+        "skill_value_type": 0,
+        "club_ids": [],
+        "ball_types": [],
+        "Note": "jump ball power +5%"
+    },
+    "1070": {
+        "skill_id": 1070,
+        "skill_desc": "skill_power",
+        "skill_type": 1,
+        "skill_value": 8,
+        "skill_value_type": 0,
+        "club_ids": [],
+        "ball_types": [],
+        "Note": "jump ball power +8%"
+    },
+    "1071": {
+        "skill_id": 1071,
+        "skill_desc": "skill_top_spin_up",
+        "skill_type": 5,
+        "skill_value": 10,
+        "skill_value_type": 1,
+        "club_ids": [
+            31
+        ],
+        "ball_types": [],
+        "Note": "earth_top_spin +10"
+    },
+    "1072": {
+        "skill_id": 1072,
+        "skill_desc": "skill_top_spin_up",
+        "skill_type": 5,
+        "skill_value": 10,
+        "skill_value_type": 1,
+        "club_ids": [
+            32
+        ],
+        "ball_types": [],
+        "Note": "moon_top_spin +10"
+    },
+    "1073": {
+        "skill_id": 1073,
+        "skill_desc": "skill_bounce",
+        "skill_type": 3,
+        "skill_value": 5,
+        "skill_value_type": 0,
+        "club_ids": [],
+        "ball_types": [],
+        "Note": "jump ball bounce +5%"
+    },
+    "1074": {
+        "skill_id": 1074,
+        "skill_desc": "skill_power",
+        "skill_type": 1,
+        "skill_value": 5,
+        "skill_value_type": 0,
+        "club_ids": [],
+        "ball_types": [],
+        "Note": "jump ball power +5%"
+    },
+    "1075": {
+        "skill_id": 1075,
+        "skill_desc": "skill_power",
+        "skill_type": 1,
+        "skill_value": 8,
+        "skill_value_type": 0,
+        "club_ids": [],
+        "ball_types": [],
+        "Note": "jump ball power +8%"
+    },
+    "1076": {
+        "skill_id": 1076,
+        "skill_desc": "skill_top_spin_up",
+        "skill_type": 5,
+        "skill_value": 10,
+        "skill_value_type": 1,
+        "club_ids": [
+            31
+        ],
+        "ball_types": [],
+        "Note": "earth_top_spin +10"
+    },
+    "1077": {
+        "skill_id": 1077,
+        "skill_desc": "skill_top_spin_up",
+        "skill_type": 5,
+        "skill_value": 10,
+        "skill_value_type": 1,
+        "club_ids": [
+            32
+        ],
+        "ball_types": [],
+        "Note": "moon_top_spin +10"
+    },
+    "1078": {
+        "skill_id": 1078,
+        "skill_desc": "skill_earth_reduce_wind",
+        "skill_type": 4,
+        "skill_value": -10,
+        "skill_value_type": 0,
+        "club_ids": [
+            31
+        ],
+        "ball_types": [],
+        "Note": "Earth_wind -10%"
+    },
+    "1079": {
+        "skill_id": 1079,
+        "skill_desc": "skill_moon_reduce_wind",
+        "skill_type": 4,
+        "skill_value": -10,
+        "skill_value_type": 0,
+        "club_ids": [
+            32
+        ],
+        "ball_types": [],
+        "Note": "moon_wind -10%"
     }
 }
